--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,8 +1,24 @@
 body {
   margin: 0;
-}
-
-canvas {
-  width: 100%;
-  height: 100%;
+  font-family: sans-serif;
+  color: white;
+  line-height: 2;
+  ul, li {
+    margin: 0;
+    padding: 0;
+  }
+  .wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+  }
+  canvas {
+    width: 100%;
+    height: 100%;
+  }
 }
